[package]
name = "kms"
version = "6.3.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = { version = "1.0", features = ["default", "gzip"] }
clap = { version = "3.0.14", features = ["derive"] }
git-version = "0.3.5"
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"

cloud-util = "0.1"
cita_cloud_proto = "=6.3.0"
status_code = { package = "cloud-code", version = "0.1" }

r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
rusqlite = "0.25.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rand = "0.6" # must be match deps of secp256k1
rayon = "1.5"
secp256k1 = {version = "0.20.2", features = ["rand", "recovery"]}
lazy_static = "1.4.0"
aes = "0.7.0"
ctr = "0.7.0"
serde = "1.0.126"
serde_derive = "1.0.126"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
