[package]
name = "kms"
version = "6.4.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = { version = "1.0", features = ["gzip"] }
clap = { version = "3.1", features = ["derive"] }
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.17", features = ["full"] }
hex = "0.4"

cloud-util = "0.2"
cita_cloud_proto = "=6.4.0"
status_code = { package = "cloud-code", version = "0.2" }

r2d2 = "0.8"
r2d2_sqlite = "0.20"
rusqlite = "0.27"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.6" # must be match deps of secp256k1
rayon = "1.5"
secp256k1 = {version = "0.22", features = ["rand", "recovery"]}
lazy_static = "1.4"
aes = "0.8"
ctr = "0.9"
serde = "1.0"
serde_derive = "1.0"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
